Bug 1175940 - UIResolutionChanged should not trigger sync messages from content to chrome. r=mconley